# lgsf-project

./: .gitignore  README.md  lgsf.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
.qtcreator/: project.json.user.aaebf96
back-end/: dbhandler.cpp  dbhandler.h
back-end/json/: Ministry_Culture_Tourism_Civil Aviation_Citizen_Charter_Eng.json  Ministry_Foreign_Affair_Citizen_Charter_Eng.json  Ministry_Home_Affairs_Citizen_Charter_Eng.json  Ministry_Home_Affairs_Immigration_Citizen_Charter_Eng.json  Ministry_Labor_Employment_Social_Security_Citizen_Charter_Eng.json  Ministry_LandManagement_Land_Reform_Eng.json  Ministry_of_Physical_Infrastructure_and_Transport.json  Misitry_Agricuture_Livestock_Fruit_Development_Citizen_Charter_Eng.json  dbhandler.cpp  ministry_of_finance.json  responses.json
chatbot/: QJsonDocument.pro  QJsonDocument.pro.user.5b04495  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
config/: database.ini
database/: LgsfInfo.sql  UserInfo.sql  db_config.ini
front-end/: CMakeLists.txt
front-end/chatbot/: QJsonDocument.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
front-end/lgsf_login_scratch/: CMakeLists.txt  bg_image.qrc  mainwindow.cpp  mainwindow.ui
front-end/login/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  background_image.qrc  dbhandler.cpp  dbhandler.h  icons.qrc  login.pro  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_loginwindow.h
front-end/login/backend/: backend_config.ini
front-end/login/database/: db_config.ini
front-end/main-interface/main-gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
front-end/signup/: CMakeLists.txt  SIGNUP.pro  bg.qrc  bgimage.qrc  image.qrc  img.qrc  lgsfbg.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
json/: Ministry_Culture_Tourism_Civil Aviation_Citizen_Charter_Eng.json  Ministry_Foreign_Affair_Citizen_Charter_Eng.json  Ministry_Home_Affairs_Citizen_Charter_Eng.json  Ministry_Home_Affairs_Immigration_Citizen_Charter_Eng.json  Ministry_Labor_Employment_Social_Security_Citizen_Charter_Eng.json  Ministry_LandManagement_Land_Reform_Eng.json  Ministry_LandManagement_Land_Revenue_Eng.json  Ministry_of_Physical_Infrastructure_and_Transport.json  Misitry_Agricuture_Livestock_Fruit_Development_Citizen_Charter_Eng.json  data_inserter.cpp
json/Nep/: Ministry_Labor_Employment_Social_Security_Citizen_Charter_Nep.json  Ministry_LandManagement_Land_Revenue_Eng.json  Ministry_LandManagement_Land_Revenue_Nep.json  Misitry_Agricuture_Livestock_Fruit_Development_Citizen_Charter_Nep.json
server/: server.js
